# bh-symbols

./: .gitignore  CHANGES.md  Makefile  README.md  build_bales.py  build_symbols.py  hatch_build.py  install.filter  pyproject.toml  run_inkscape.py  tests.py
.github/workflows/: build.yml
src/: bh-bales.xslt  fix-patterns.xslt
